# super-skills

./: .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  audit-issues.json
.agents/skills/architect/: SKILL.md
.agents/skills/cli-tools-engineer/: SKILL.md
.agents/skills/qa-engineer/: SKILL.md
.agents/skills/sre/: SKILL.md
.claude/skills/backend-engineer/: SKILL.md
.claude/skills/cybersecurity-engineer/: SKILL.md
.claude/skills/frontend-engineer/: SKILL.md
.claude/skills/project-manager/: SKILL.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  release-please.yml
docs/: README.md
skills/: architect.md  auditor.md  backend-engineer.md  cli-tools-engineer.md  code-reviewer.md  cybersecurity-engineer.md  frontend-engineer.md  postgres-engineer.md  project-manager.md  qa-engineer.md  red-team-engineer.md  rust-mcp-coder.md  seo-specialist.md  sre.md  supply-chain-specialist.md  troubleshooter.md  weekly-activities-generator.md
tools/: audit.py
tools/apps/audit_runner/: README.md  pyproject.toml
tools/apps/audit_runner/src/audit_runner/: __init__.py  cli.py
